--- a/NewsFeed_html/home.html
+++ b/NewsFeed_html/home.html
@@ -294,7 +294,7 @@
     </section><!-- End slider section -->
      <!-- =========================
       //////////////This Theme Design and Developed //////////////////////
-      //////////// by www.wpfreeware.com======================-->
+      //////////// by triumphantakash.github.io======================-->
 
     <!-- ==================start content body section=============== -->
     <section id="contentSection">
@@ -307,19 +307,47 @@
               <div id="prev-button"><i class="fa fa-chevron-up"></i></div>
               <ul class="latest_postnav">
               <?php
+
+			   //          class ChildThread extends Thread {
+			   //  			public $data;
+
+			   //  			public function run() {
+			   //    			/* Do some work */
+
+			   //    			$this->data = 'result';
+			   //  			}
+						// }
+
+						// $thread = new ChildThread();
+
+						// if ($thread->start()) {
+					 //    /*
+					 //     * Do some work here, while already doing other
+					 //     * work in the child thread.
+					 //     */
+
+						//     // wait until thread is finished
+						//     $thread->join();
+
+    		// 				// we can now even access $thread->data
+						// }
+
+
 					$json = file_get_contents('http://localhost:8080/Favor/work/open');
 					$feedArray = json_decode($json);
 					//echo '<ul>';
 					foreach($feedArray as $feedItem){
-	 					echo '<li>'.$feedItem->fname.'</li>';
-	 					// echo '<div class="media">
-       //              <a href="single_page.html" class="media-left">
-       //                <img alt="img" src="img/user7.png">
-       //              </a>
-       //              <div class="media-body">
-       //                <a href="single_page.html" class="catg_title"> Ravi requested for task requested by Ashesh</a>                        
-       //              </div>
-       //            </div>';
+	 					//echo '<li>'.$feedItem->fname.'</li>';
+	 					echo '<li>
+		 						<div class="media">
+				                    <a href="single_page.html" class="media-left">
+				                      <img alt="img" src="img/user1.png">
+				                    </a>
+				                    	<div class="media-body">
+				                      		<a href="single_page.html" class="catg_title">'.$feedItem->workDescription.' requested by '.$feedItem->fname.' '.$feedItem->lname.'</a>
+				                    	</div>
+				                 </div>
+                  			</li>';
 					}
 					//echo '</ul>';
 				?>
